--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:main": "src/index.ts"
   },
   "dependencies": {
+    "csv-parse": "^5.5.2",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.1"
