fix: Configuring typeorm to create migrations

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,5 +4,9 @@
   "host": "database_concept_node",
   "username": "docker",
   "password": "Dr@gon",
-  "database": "concept_node"
+  "database": "concept_node",
+  "migrations": ["./src/database/migrations/*.ts"],
+  "cli": {
+    "migrationsDir": "./src/database/migrations"
+  }
 }
