Does not contain the API, because I am only working locally

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,7 +1,7 @@
 {
   "type": "postgres",
   "port": 5432,
-  "host": "database_concept_node",
+  "host": "localhost",
   "username": "docker",
   "password": "Dr@gon",
   "database": "concept_node",
