--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,19 +17,19 @@ services:
       - backend_concept_node
 
 
-  app:
-    build: .
-    container_name: concept_node
-    ports:
-      - 3333:3333
-    volumes:
-      - .:/usr/app
-    links:
-     - database
-    depends_on:
-     - database
-    networks:
-      - backend_concept_node
+  # app:
+  #   build: .
+  #   container_name: concept_node
+  #   ports:
+  #     - 3333:3333
+  #   volumes:
+  #     - .:/usr/app
+  #   links:
+  #    - database
+  #   depends_on:
+  #    - database
+  #   networks:
+  #     - backend_concept_node
 
 networks:
   backend_concept_node:
