--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts --watch",
     "start:main": "src/index.ts",
-    "typeorm":  "ts-node-dev ./node_modules/typeorm/cli"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
   },
   "dependencies": {
     "csv-parse": "^5.5.2",
@@ -15,6 +15,7 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^5.0.0",
+    "tsyringe": "^4.8.0",
     "typeorm": "0.2.45",
     "uuid": "^9.0.1"
   },
