--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "csv-parse": "^5.5.2",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
@@ -20,6 +21,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.18",
     "@types/multer": "^1.4.11",
     "@types/swagger-ui-express": "^4.1.6",
