--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.1",
     "csv-parse": "^5.5.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.7",
