--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start:dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts --watch",
+    "start:dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts --watch",
     "start:main": "src/index.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
     "test": "jest"
@@ -44,6 +44,7 @@
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   }
 }
