--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "paths": {
       "@modules/*": ["modules/*"],
       "@erros/*": ["erros/*"],
-      "@config/*": ["config/*"],
+      "@configs/*": ["configs/*"],
       "@shared/*": ["shared/*"],
       "@utils/*": ["utils/*"]
     },
